<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mathieu.projet.activity_gestion">

    <Button
        android:id="@+id/buttonGestionMembre"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="76dp"
        android:text="@string/txtBtnGestionMembres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <Button
        android:id="@+id/buttonGestionColoc"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="76dp"
        android:text="@string/txtBtnGestionColoc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/buttonLeaderboard"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="76dp"
        android:text="@string/txtBtnTableauScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/buttonParam"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"

        android:background="@drawable/button_bg"
        android:foreground="@android:drawable/ic_menu_manage"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

</android.support.constraint.ConstraintLayout>
